fix: added spacing of notification heading

--- a/app/styles/notification.css
+++ b/app/styles/notification.css
@@ -52,7 +52,7 @@
 }
 
 .tip-box-alert {
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 20px;
 }
 
 .new-message-box-alert {
@@ -84,6 +84,7 @@
 .text-title {
   font-weight: bold;
   font-size: 20px;
+  padding-bottom: 4px;
 }
 
 .text-description {
